# casia_humanoid_mujoco

./: .gitignore  README.md
humanoid_ctrl/: CMakeLists.txt  main.cpp  udp.c  udp.h
humanoid_sim/: CMakeLists.txt  humanoid.xml  humanoidmujoco.c  humanoidmujoco.h  main.c  main.m  udp.c
humanoid_sim/meshes_zidong/: Body.stl  ForeArm.stl  ForeArm2.stl  HipRx.stl  HipRz.stl  LowerLeg3_drawing.stl  ShoulderRx.stl  Thigh.stl  UpperArm.stl  dae2obj.py  foot_drawing.stl  myobj2stl.py
